--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -55,7 +55,10 @@
   <ItemGroup>
     <Compile Include="Assets\Assets\Scripts\CharacterMovement.cs" />
     <Compile Include="Assets\Assets\Scripts\CameraPhaseController.cs" />
+    <Compile Include="Assets\Assets\Scripts\ShootingSystem.cs" />
     <Compile Include="Assets\Assets\Scripts\BallMechanic.cs" />
+    <Compile Include="Assets\Assets\Scripts\GroundPartsSystem.cs" />
+    <Compile Include="Assets\Assets\Scripts\ObjectPoolingSystem.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
