--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -54,12 +54,13 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Assets\Assets\Scripts\CharacterMovement.cs" />
+    <Compile Include="Assets\Assets\Scripts\Ending.cs" />
     <Compile Include="Assets\Assets\Scripts\CameraPhaseController.cs" />
     <Compile Include="Assets\Assets\Scripts\GroundPartsSystem.cs" />
     <Compile Include="Assets\Assets\Scripts\ObjectPoolingSystem.cs" />
     <Compile Include="Assets\Assets\Scripts\ShootingSystem.cs" />
     <Compile Include="Assets\Assets\Scripts\BallMechanic.cs" />
-    <Compile Include="Assets\Assets\Scripts\Ending.cs" />
+    <Compile Include="Assets\Assets\Scripts\SceneChanger.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
